--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+movein (1.1-1) unstable; urgency=low
+
+  * new upstream version
+  * fixes problems with newer git (both bare and worktree don't make sense)
+  * add ls-r command (Thanks Gregor Herrmann)
+  * don't clobber .mrconfig (Thanks Gregor Herrmann)
+
+ -- Mike O'Connor <stew@debian.org>  Sat, 08 Oct 2011 14:36:35 -0400
+
 movein (1.0-1) unstable; urgency=low
 
   * initial release
