Allow multiple repos to be specified with "add"

--- a/movein.1
+++ b/movein.1
@@ -44,7 +44,8 @@ Show a list of remote repositories
 .IR add
 repository_name
 .RS 4
-checkout the repository from the remote host and add it to mr's configuration
+checkout one or more repositories from the remote host and add it to
+mr's configuration
 .RE
 
 .B movein
