Add "locate" command to movein

--- a/movein.1
+++ b/movein.1
@@ -65,6 +65,13 @@ repository_name
 start a subshell in repository_name
 .RE
 
+.B movein
+.IR locate
+pattern
+.RS 4
+search for files matching "pattern" (which is an extended regular expression
+passed to sed(1)) in all local repositories
+.RE
 
 .B movein
 .IR exec
